# spacesurf

./: .gitignore  README.md  build.sh  compile_run.sh  meson.build  run.sh
res/dialogue/: dia1.json
res/levels/: tutorial.sl
src/: assets.cc  assets.hh  clock.cc  clock.hh  cutscene.cc  cutscene.hh  dialogue.cc  dialogue.hh  effects.cc  effects.hh  game.cc  game.hh  gameobject.cc  gameobject.hh  helpers.hh  hud.cc  hud.hh  label.cc  label.hh  level.cc  level.hh  levelinfo.hh  main.cc  menu.cc  menu.hh  object.cc  object.hh  player.cc  player.hh  resources.cc  resources.hh  stone.cc  stone.hh
